--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,26 @@
   list-style: none;
 }
 
+:root {
+  --Jet: #363636; /* PAGE PRIMARY COLOUR */
+  --Platinum: #E5E5E5; /* FONT OUT OF DARK */
+  --Gunmetal: #242F40; /* MAIN FONT COLOUR */
+  --Satin: #CCA43B; /* ACCENT AND HIGHLIGHT */
+  --cabin: 'Cabin';  /* MAIN BODY FONT */
+  --Roboto: 'Roboto Condensed'; /* HEADINGS FONT */  
+
+
+
+
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  Font-Family: 'Cabin';
   line-height: 1.5;
+  color: var(--Gunmetal);
+  background-color: var(--Platinum);
 }
 
 h1,
@@ -17,6 +32,7 @@ h4,
 h5,
 h6 {
   margin: 0;
+  font-family: var(--Roboto);
 }
 
 p {
@@ -39,15 +55,15 @@ a {
   
   padding: 20px;
   
-  background-color: teal;
+  background-color: var(--Jet);
   
-  color: #fff;
+  color: var(--Platinum);
   
   }
   
   .nav-links a {
   
-  color: #fff;
+  color: var(--Platinum);
   
   }
   
@@ -56,8 +72,9 @@ a {
   .logo {
   
   font-size: 40px;
-  background-color: black;
+  background-color: var(--Satin);
   padding: 5px;
+  border-radius: 20px;
   
   }
   
@@ -75,7 +92,7 @@ a {
   
   .menu li:hover {
   
-  background-color: #4c9e9e;
+  background-color: var(--Satin);
   
   border-radius: 5px;
   
@@ -119,10 +136,10 @@ a {
 
   .hero-banner {
     height: 200px;
-    width: 100vw;
+    width: 100%;
     position: relative;
     background-size: cover;
-    background-position: 100%;
+    
     background-image: url("../images/02-hero-bg.jpg");
     z-index:-100;
   }
@@ -133,7 +150,7 @@ a {
     width: 100%;
    
     background: rgba(0, 0, 0, 0.65);
-    color: white;
+    color: var(--Platinum);
     display: flex;
     align-items: flex-end;
     flex-direction: column;
@@ -154,6 +171,25 @@ a {
       width: 300px;
       margin: 50px auto;
     }
+
+  /* GRID SECTION */
+
+  .row {
+    display: flex;
+   
+  }
+  
+  /* Create two equal columns that sits next to each other */
+  .column {
+    display: flex;
+    flex-direction: column;
+    flex: 50%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+   justify-content: flex-start;
+  
+   
+  }
 
    /* GRID SECTION */
     
@@ -206,13 +242,20 @@ a {
     {background-color: rgba(0,0,0,0.7);
     padding: 15px;
     height: 25px;
-    color: white;
+    color: var(--Platinum);
     font-size: 18px;
     border-bottom: 5px solid #FF6200;
     }
 
 
+  /* FOOTER CSS */
 
+    .footer {
+      padding: 30px;
+      clear: both;
+      text-align: center;
+      font-size: 20px;
+    }
 
     
     /* APPLYING MEDIA QUERIES */
@@ -225,7 +268,7 @@ a {
       
       position: absolute;
       
-      background-color:teal;
+      background-color:var(--Jet);
       
       right: 0;
       
@@ -241,7 +284,7 @@ a {
       
       display: inline-block;
       
-      background-color:#4c9e9e;
+      background-color:var(--Satin);
       
       transition: 0.3s ease;
       
