--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* MAIN PAGE CONTROLS */
+
 * {
   box-sizing: border-box;
   list-style: none;
@@ -11,10 +13,9 @@
   --cabin: 'Cabin';  /* MAIN BODY FONT */
   --Roboto: 'Roboto Condensed'; /* HEADINGS FONT */  
 
-
-
-
 }
+
+/* MAIN BODY AND ELEMENT CONTROLS */
 
 body {
   margin: 0;
@@ -41,7 +42,8 @@ p {
 
 a {
 
-  text-decoration: none;}
+  text-decoration: none;
+  color: var(--Platinum)}
 
 /* NAVBAR STYLING STARTS */
 
@@ -64,17 +66,6 @@ a {
   .nav-links a {
   
   color: var(--Platinum);
-  
-  }
-  
-  /* LOGO */
-  
-  .logo {
-  
-  font-size: 40px;
-  background-color: var(--Satin);
-  padding: 5px;
-  border-radius: 20px;
   
   }
   
@@ -106,10 +97,22 @@ a {
   
   }
   
+
+  /* LOGO */
+  
+  .logo {
+  
+    font-size: 40px;
+    background-color: var(--Satin);
+    padding: 5px;
+    border-radius: 20px;
+    z-index: 100;
+    
+    }
   
   /*RESPONSIVE NAVBAR MENU STARTS*/
   
-  /* CHECKBOX HACK */
+  /* CHECKBOX HACK found on madeuseof*/
   
   input[type=checkbox]{
   
@@ -117,7 +120,7 @@ a {
     
     }
     
-    /*HAMBURGER MENU*/
+    /*HAMBURGER MENU found on madeuseof*/
     
     .hamburger {
     
@@ -126,6 +129,7 @@ a {
     font-size: 24px;
     
     user-select: none;
+    color: var(--Satin);
     
     }
     
@@ -148,11 +152,10 @@ a {
     position: absolute;
     height: 100%;
     width: 100%;
-   
-    background: rgba(0, 0, 0, 0.65);
+    background: rgba(54, 54, 54, 0.65);
     color: var(--Platinum);
     display: flex;
-    align-items: flex-end;
+    align-items: center ;
     flex-direction: column;
     justify-content: center;
    
@@ -165,27 +168,44 @@ a {
   }
     
 
-    .subheading {
-      text-align: center ;
-      border-bottom: 2px solid black;
-      width: 300px;
-      margin: 50px auto;
+  /* PAGE HEADINGS SUB HEADINGS */
+
+
+  .heading 
+    {background-color: rgba(54,54,54,0.7);
+    padding: 45px;
+    height: 50px;
+    color: var(--Platinum);
+    font-size: 30px;
+    border-bottom: 10px solid var(--Satin);
+    text-align: center;
+    cursor: pointer;
     }
 
-  /* GRID SECTION */
+    .subheading {
+      text-align: center ;
+      border-bottom: 2px solid var(--Satin);
+      padding: 5px;
+      width: 100px;
+      margin: 20px auto;
+    }
+
+
+
+
+  /* FLEXBOX SECTIONS (ABOUT ME / CONTACT ME)*/
 
   .row {
     display: flex;
    
   }
   
-  /* Create two equal columns that sits next to each other */
   .column {
     display: flex;
     flex-direction: column;
     flex: 50%;
     padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
+    height: 300px; 
    justify-content: flex-start;
   
    
@@ -197,35 +217,38 @@ a {
       margin: 0px 5%;
       display: grid;
       grid-template-rows: 300px 300px 300px;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-areas: "bookcase bedroom patio"
-      "couch couch patio"
-      "desk desk desk"
+      grid-template-columns: 0.75fr 1fr 1fr;
+      grid-template-areas: "portfolio1 portfolio1 portfolio1"
+      "portfolio2 portfolio3 portfolio4"
+      "portfolio2 portfolio5 portfolio5"
     }
     
-    #bookcases {
-      background-image: url("../images/02-portfolio-1.jpg");
-      grid-area: bookcase;
+    #portfolio1 {
+      background-image: url("../images/horiseon.jpg");
+      grid-area: portfolio1;
+      background-position: top; /* USEFUL TO SET IMAGE POSITION */
     }
     
-    #bedroom {
-      background-image: url("../images/beds.png");
-      grid-area: bedroom;
+    #portfolio2 {
+      background-image: url("../images/html_cheat.jpg");
+      grid-area: portfolio2;
     }
     
-    #couches {
-      background-image: url("../images/couch.png");
-      grid-area: couch;
+    #portfolio3 {
+      background-image: url("../images/flex_cheat.jpg");
+      grid-area: portfolio3;
     }
     
-    #patio {
-      background-image: url("../images/patio.png");
-      grid-area: patio;
+    #portfolio4 {
+      background-image: url("../images/design_system.jpg");
+      grid-area: portfolio4;
     }
     
-    #desks {
-      background-image: url("../images/desks.png");
-      grid-area: desk;
+    #portfolio5 {
+      background-image: url("../images/bootcamp.jpg");
+      grid-area: portfolio5;
+      background-position: top; /* USEFUL TO SET IMAGE POSITION */
+
     }
     
     .categoryGridArea {
@@ -233,20 +256,10 @@ a {
       background-size: cover;
       background-repeat: no-repeat;
       margin: 5px;
-      cursor: pointer;
       display: grid;
       align-content: end;
     }
-    
-    .heading 
-    {background-color: rgba(0,0,0,0.7);
-    padding: 15px;
-    height: 25px;
-    color: var(--Platinum);
-    font-size: 18px;
-    border-bottom: 5px solid #FF6200;
-    }
-
+  
 
   /* FOOTER CSS */
 
@@ -262,6 +275,7 @@ a {
     
     @media (max-width: 768px) {
     
+        /* APPLYING MENU MEDIA QUERIES */
       .menu {
       
       display:none;
@@ -306,4 +320,37 @@ a {
       
       display: block;
       
-      }}
+      }
+
+         /* APPLYING GRID AREA MEDIA QUERIES */
+
+        #categoryGrid {
+          justify-content: center;
+          align-content: center;
+          grid-template-rows: 300px 300px 300px 300px 300px;
+          grid-template-columns: 80vw;
+          grid-template-areas:
+            "portfolio1"
+            "portfolio2"
+            "portfolio3"
+            "portfolio4"
+            "portfolio5"
+          ;
+        }
+
+        .overlay h2 /* ADJUSTS FONT SIZE FOR MOBILE */ {
+          font-size: 25px;
+    
+        }   
+
+
+        .heading  /* ADJUSTS GRID HEADINGS FOR MOBILE */
+        {
+        padding: 25px;
+        height: 20px;
+        font-size: 18px;
+        border-bottom: 5px solid var(--Satin);
+      
+   
+
+      }
