--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,23 @@
 /* MAIN PAGE CONTROLS */
-
 * {
   box-sizing: border-box;
   list-style: none;
 }
-
 :root {
-  --Jet: #363636; /* PAGE PRIMARY COLOUR */
-  --Platinum: #E5E5E5; /* FONT OUT OF DARK */
-  --Gunmetal: #242F40; /* MAIN FONT COLOUR */
-  --Satin: #CCA43B; /* ACCENT AND HIGHLIGHT */
-  --cabin: 'Cabin';  /* MAIN BODY FONT */
-  --Roboto: 'Roboto Condensed'; /* HEADINGS FONT */  
-
+  /* PAGE PRIMARY COLOUR */
+  --Jet: #363636;
+ /* FONT OUT OF DARK AND PAGE COLOUR */
+  --Platinum: #E5E5E5;
+ /* MAIN FONT COLOUR */
+  --Gunmetal: #242F40;
+ /* ACCENT AND HIGHLIGHT */
+  --Satin: #CCA43B;
+ /* MAIN BODY FONT */
+  --cabin: 'Cabin';
+ /* HEADINGS FONT */
+  --Roboto: 'Roboto Condensed';
 }
-
 /* MAIN BODY AND ELEMENT CONTROLS */
-
 body {
   margin: 0;
   padding: 0;
@@ -25,380 +26,277 @@ body {
   color: var(--Gunmetal);
   background-color: var(--Platinum);
 }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   margin: 0;
   font-family: var(--Roboto);
 }
-
 p {
   margin: 0;
   text-align: center;
-
+}
+a {
+  text-decoration: none;
+  color: var(--Platinum)
+}
+/* NAVBAR STYLING STARTS */
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  background-color: var(--Jet);
+  color: var(--Platinum);
+}
+.nav-links a {
+  color: var(--Platinum);
+}
+/* NAVBAR MENU */
+.menu {
+  display: flex;
+  gap: 1em;
+  font-size: 18px;
+}
+.menu li:hover {
+  background-color: var(--Satin);
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+.menu li {
+  padding: 5px 14px;
+}
+/* LOGO */
+.logo {
+  font-size: 40px;
+  background-color: var(--Satin);
+  padding: 5px;
+  border-radius: 20px;
+  z-index: 100;
+  position: relative;
+  left: -40px;
 }
 
-a {
 
-  text-decoration: none;
-  color: var(--Platinum)}
-
-/* NAVBAR STYLING STARTS */
-
-.navbar {
-
-  display: flex;
-  
-  align-items: center;
-  
-  justify-content: center;
-  
-  padding: 20px;
-  
-  background-color: var(--Jet);
-  
-  color: var(--Platinum);
- 
-  
-  }
-  
-  .nav-links a {
-  
-  color: var(--Platinum);
-  
-  }
-  
-  /* NAVBAR MENU */
-  
-  .menu {
-  
-  display: flex;
-  
-  gap: 1em;
-  
-  font-size: 18px;
-  
-  }
-  
-  .menu li:hover {
-  
-  background-color: var(--Satin);
-  
-  border-radius: 5px;
-  
-  transition: 0.3s ease;
-  
-  }
-  
-  .menu li {
-  
-  padding: 5px 14px;
-  
-  }
-  
-
-  /* LOGO */
-  
-  .logo {
-  
-    font-size: 40px;
-    background-color: var(--Satin);
-    padding: 5px;
-    border-radius: 20px;
-    z-index: 100;
-    position: relative;
-    left: -40px;
-    
-    }
-  
-  /*RESPONSIVE NAVBAR MENU STARTS*/
-  
-  /* CHECKBOX HACK found on madeuseof*/
-  
-  input[type=checkbox]{
-  
-    display: none;
-    
-    }
-    
-    /*HAMBURGER MENU found on madeuseof*/
-    
-    .hamburger {
-    
-    display: none;
-    
-    font-size: 24px;
-    
-    user-select: none;
-    color: var(--Satin);
-    
-    }
-    
-    
-
-
-  /* Hero Banner*/
-
-  .hero-banner {
-    height: 300px;
-    width: 100%;
-    position: relative;
-    background-size: cover;
-    background-image: url("../images/02-portfolio-2.jpg");
-    z-index:-100;
-  }
-
-  .overlay {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: rgba(54, 54, 54, 0.65);
-    color: var(--Platinum);
-    display: flex;
-    align-items: center ;
-    flex-direction: column;
-    justify-content: center;
-   
-  }
-  
-  .overlay h2 {
-    font-size: 50px;
-    margin: 0 0 5px;
-  }
-    
- /* H2 ANIMATION */
-
-.period {
+/*RESPONSIVE NAVBAR MENU STARTS*/
+/* CHECKBOX HAMBURGER https://www.makeuseof.com/responsive-navigation-bar-using-html-and-css/*/
+input[type=checkbox]{
+  display: none;
+}
+/*HAMBURGER MENU https://www.makeuseof.com/responsive-navigation-bar-using-html-and-css/*/
+.hamburger {
+  display: none;
+  font-size: 24px;
+  user-select: none;
   color: var(--Satin);
-  animation: blinker 1.5s linear infinite;
+}
+/* HERO BANNER */
+.hero-banner {
+  height: 300px;
+  width: 100%;
+  position: relative;
+  background-size: cover;
+  background-image: url("../images/02-portfolio-2.jpg");
+  z-index:-100;
+}
+.overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: rgba(54, 54, 54, 0.65);
+  color: var(--Platinum);
+  display: flex;
+  align-items: center ;
+  flex-direction: column;
+  justify-content: center;
+}
+.overlay h2 {
+  font-size: 50px;
+  margin: 0 0 5px;
+}
+/* ANIMATION SPANS */
+.animate {
+  color: var(--Satin);
+  animation: blinker 1.75s linear infinite;
+  text-decoration: none;
 }
 @keyframes blinker {
   50% {
+      opacity: 0;
+ }
+}
+
+.animatelogo {
+color: var(--Platinum);
+animation: blinker 1.75s linear infinite;
+text-decoration: none;
+}
+@keyframes blinker {
+50% {
     opacity: 0;
-  }
+}
 }
 
 
-  /* PAGE HEADINGS SUB HEADINGS */
-
-
-  .heading 
-    {background-color: rgba(54,54,54,0.8);
-    padding: 30px;
-    color: var(--Platinum);
-    font-size: 30px;
-    border-bottom: 10px solid var(--Satin);
-    text-align: center;
-    cursor: pointer;
-    }
-
-    .heading:hover
-    {background-color: rgba(54,54,54,0.8);
-      padding: 50px;
-      transition: padding 400ms; /* ANIMATES UNDERLINE */;
-     }
-
-    .heading a {
-      color: inherit;
-      text-decoration: underline 0.15em rgba(255, 255, 255, 0); /* TRANSPARENT UNDERLINE */
-      transition: text-decoration-color 300ms; /* ANIMATES UNDERLINE */
-    }
-    
-    .heading a:hover {
-      text-decoration-color: var(--Satin)
-    }
-
-    .subheading {
-      text-align: center ;
-      border-bottom: 2px solid var(--Satin);
-      padding: 5px;
-      width: 100px;
-      margin: 20px auto;
-    }
-
-
-
-
-  /* FLEXBOX SECTIONS (ABOUT ME / CONTACT ME)*/
-
+/* PAGE HEADINGS SUB HEADINGS */
+.heading {
+ background-color: rgba(54,54,54,0.8);
+  padding: 30px;
+  color: var(--Platinum);
+  font-size: 30px;
+  border-bottom: 10px solid var(--Satin);
+  text-align: center;
+  cursor: pointer;
+}
+.heading:hover {
+ background-color: rgba(54,54,54,0.8);
+  padding: 50px;
+  transition: padding 400ms;
+ /* ANIMATES UNDERLINE */
  
-  
-  .columnabout {
-    display: flex;
-    width: 70%;
-    padding: 10px;
-    margin: auto;
-  }
+}
+.heading a {
+  color: inherit;
+  text-decoration: underline 0.15em rgba(255, 255, 255, 0);
+ /* TRANSPARENT UNDERLINE */
+  transition: text-decoration-color 0.5s;
+ /* ANIMATES UNDERLINE */
+}
+.heading a:hover {
+  text-decoration-color: var(--Satin) 
+}
+.subheading {
+  text-align: center ;
+  border-bottom: 2px solid var(--Satin);
+  padding: 5px;
+  width: 100px;
+  margin: 20px auto;
+}
+/* FLEXBOX SECTIONS (ABOUT ME / CONTACT ME)*/
+.columnabout {
+  display: flex;
+  width: 70%;
+  padding: 10px;
+  margin: auto;
+}
+.contactcolumn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 10px;
+  height: 50px;
+  background-color: var(--Jet);
+  color: var(--Platinum);
+}
 
-  .contactcolumn {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    padding: 10px;
-    height: 50px; 
-    background-color: var(--Jet);
-    color: var(--Platinum);
-    
-   
-  
-   
-  }
-
-
-   /* GRID SECTION */
-
-   .categoryGridArea {
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin: 5px;
-    display: grid;
-    align-content: flex-end;
-    
-  }
-
-    
-    #categoryGrid {
-      margin: 0px 5%;
-      display: grid;
-      grid-template-rows: 300px 300px 300px 300px;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-      grid-template-areas: "portfolio1 portfolio1 portfolio1 portfolio1"
-      "portfolio1 portfolio1 portfolio1 portfolio1"
-      "portfolio2 portfolio2 portfolio3 portfolio3"
-      "portfolio4 portfolio4 portfolio5 portfolio5"
-      
-    }
-
-  
-    #portfolio1 {
-     background-image: url("../images/horiseon.jpg");
-      grid-area: portfolio1;
-      background-position: top; /* USEFUL TO SET IMAGE POSITION */
-    }
-    
-    #portfolio2 {
-      background-image: url("../images/html_cheat.jpg");
-      grid-area: portfolio2;
-    }
-    
-    #portfolio3 {
-      background-image: url("../images/flex_cheat.jpg");
-      grid-area: portfolio3;
-    }
-    
-    #portfolio4 {
-      background-image: url("../images/design_system.jpg");
-      grid-area: portfolio4;
-    }
-    
-    #portfolio5 {
-      background-image: url("../images/bootcamp.jpg");
-      grid-area: portfolio5;
-      background-position: top; /* USEFUL TO SET IMAGE POSITION */
-
-    }
-    
+.contactcolumn p {
+  padding: 0px 50px;
  
-  
 
-  /* FOOTER CSS */
+}
 
-    .footer {
-      padding: 30px;
-      clear: both;
-      text-align: center;
-      font-size: 20px;
-    }
 
-    
-    /* APPLYING MEDIA QUERIES */
-    
-    @media (max-width: 768px) {
-    
-        /* APPLYING MENU MEDIA QUERIES */
-      .menu {
-      
+/* PORTFOLIO GRID SECTION  - INSPIRATION FROM EARLIER ASSIGNMENT*/
+.categoryGridArea {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 5px;
+  display: grid;
+  align-content: flex-end;
+}
+#categoryGrid {
+  margin: 0px 5%;
+  display: grid;
+  grid-template-rows: 300px 300px 300px 300px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-areas: "portfolio1 portfolio1 portfolio1 portfolio1" "portfolio1 portfolio1 portfolio1 portfolio1" "portfolio2 portfolio2 portfolio3 portfolio3" "portfolio4 portfolio4 portfolio5 portfolio5" 
+}
+#portfolio1 {
+  background-image: url("../images/horiseon.jpg");
+  grid-area: portfolio1;
+  background-position: top;
+ /* USEFUL TO SET IMAGE POSITION */
+}
+#portfolio2 {
+  background-image: url("../images/html_cheat.jpg");
+  grid-area: portfolio2;
+}
+#portfolio3 {
+  background-image: url("../images/flex_cheat.jpg");
+  grid-area: portfolio3;
+}
+#portfolio4 {
+  background-image: url("../images/design_system.jpg");
+  grid-area: portfolio4;
+}
+#portfolio5 {
+  background-image: url("../images/bootcamp.jpg");
+  grid-area: portfolio5;
+  background-position: top;
+ /* USEFUL TO SET IMAGE POSITION */
+}
+/* FOOTER CSS */
+.footer {
+  padding: 30px;
+  clear: both;
+  text-align: center;
+  font-size: 20px;
+}
+/* APPLYING MEDIA QUERIES */
+@media (max-width: 768px) {
+ /* APPLYING MENU MEDIA QUERIES */
+  .menu {
       display:none;
-      
       position: absolute;
-      
       background-color:var(--Jet);
-      
       right: 0;
-      
       left: 0;
-      
       text-align: center;
-      
       padding: 16px 0;
-      
-      }
-      
-      .menu li:hover {
-      
+ }
+  .menu li:hover {
       display: inline-block;
-      
       background-color:var(--Satin);
-      
       transition: 0.3s ease;
-      
-      }
-      
-      .menu li + li {
-      
+ }
+  .menu li + li {
       margin-top: 12px;
-      
-      }
-      
-      input[type=checkbox]:checked ~ .menu{
-      
+ }
+  input[type=checkbox]:checked ~ .menu{
       display: block;
-      
-      }
-      
-      .hamburger {
-      
+ }
+  .hamburger {
       display: block;
+ }
+ /* APPLYING GRID AREA MEDIA QUERIES */
+  #categoryGrid {
+      justify-content: center;
+      align-content: center;
+      grid-template-rows: 300px 300px 300px 300px 300px;
+      grid-template-columns: 80vw;
+      margin-bottom: 5px;
+      grid-template-areas: "portfolio1" "portfolio2" "portfolio3" "portfolio4" "portfolio5" ;
+ }
+  .overlay h2 
+ /* ADJUSTS FONT SIZE FOR MOBILE */
+  {
+      font-size: 20px;
+ }
+  .heading 
+ /* ADJUSTS GRID HEADINGS FOR MOBILE */
+  {
+      padding: 35px;
+      height: 20px;
+      font-size: 18px;
+      border-bottom: 5px solid var(--Satin);
+ }
+
+ .contactcolumn p 
+  /* ADJUSTS CONTACT ICONS FOR MOBILE */
+  {
+  padding: 0px 5px;
       
-      }
-
-         /* APPLYING GRID AREA MEDIA QUERIES */
-
-        #categoryGrid {
-          justify-content: center;
-          align-content: center;
-          grid-template-rows: 300px 300px 300px 300px 300px;
-          grid-template-columns: 80vw;
-          grid-template-areas:
-            "portfolio1"
-            "portfolio2"
-            "portfolio3"
-            "portfolio4"
-            "portfolio5"
-          ;
-        }
-
-        .overlay h2 /* ADJUSTS FONT SIZE FOR MOBILE */ {
-          font-size: 25px;
-    
-        }   
-
-
-        .heading  /* ADJUSTS GRID HEADINGS FOR MOBILE */
-        {
-        padding: 25px;
-        height: 20px;
-        font-size: 18px;
-        border-bottom: 5px solid var(--Satin);
-      
-   
-
-      }}
+}
+}
