finishes css, adds narrative to readme, finishes HTML

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,13 +4,13 @@
   list-style: none;
 }
 :root {
-  /* PAGE PRIMARY COLOUR */
+  /*  HEADER AND CONTACT PRIMARY COLOUR */
   --Jet: #363636;
  /* FONT OUT OF DARK AND PAGE COLOUR */
   --Platinum: #E5E5E5;
  /* MAIN FONT COLOUR */
   --Gunmetal: #242F40;
- /* ACCENT AND HIGHLIGHT */
+ /* ACCENT AND HIGHLIGHT COLOUR */
   --Satin: #CCA43B;
  /* MAIN BODY FONT */
   --cabin: 'Cabin';
@@ -45,6 +45,7 @@ a {
   justify-content: center;
   padding: 20px;
   background-color: var(--Jet);
+  background: linear-gradient(180deg, rgba(54,54,54,1) 80%, rgba(54,54,54,1) 85%, rgba(54,54,54,0.93) 90%, rgba(54,54,54,0.82) 95%);
   color: var(--Platinum);
 }
 .nav-links a {
@@ -69,7 +70,7 @@ a {
   font-size: 40px;
   background-color: var(--Satin);
   padding: 5px;
-  border-radius: 20px;
+  border-radius: 25px;
   z-index: 100;
   position: relative;
   left: -40px;
@@ -139,6 +140,7 @@ text-decoration: none;
 /* PAGE HEADINGS SUB HEADINGS */
 .heading {
  background-color: rgba(54,54,54,0.8);
+
   padding: 30px;
   color: var(--Platinum);
   font-size: 30px;
@@ -192,12 +194,10 @@ text-decoration: none;
 
 .contactcolumn p {
   padding: 0px 50px;
- 
-
 }
 
 
-/* PORTFOLIO GRID SECTION  - INSPIRATION FROM EARLIER ASSIGNMENT*/
+/* PORTFOLIO GRID SECTION  - GRID INSPIRATION FROM EARLIER ASSIGNMENT*/
 .categoryGridArea {
   background-position: center;
   background-size: cover;
@@ -211,13 +211,15 @@ text-decoration: none;
   display: grid;
   grid-template-rows: 300px 300px 300px 300px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-areas: "portfolio1 portfolio1 portfolio1 portfolio1" "portfolio1 portfolio1 portfolio1 portfolio1" "portfolio2 portfolio2 portfolio3 portfolio3" "portfolio4 portfolio4 portfolio5 portfolio5" 
+  grid-template-areas: "portfolio1 portfolio1 portfolio1 portfolio1"
+   "portfolio1 portfolio1 portfolio1 portfolio1"
+    "portfolio2 portfolio2 portfolio3 portfolio3" 
+    "portfolio4 portfolio4 portfolio5 portfolio5" ;
 }
 #portfolio1 {
   background-image: url("../images/horiseon.jpg");
   grid-area: portfolio1;
-  background-position: top;
- /* USEFUL TO SET IMAGE POSITION */
+  background-position: top; /* USEFUL TO SET IMAGE POSITION */
 }
 #portfolio2 {
   background-image: url("../images/html_cheat.jpg");
@@ -234,10 +236,10 @@ text-decoration: none;
 #portfolio5 {
   background-image: url("../images/bootcamp.jpg");
   grid-area: portfolio5;
-  background-position: top;
- /* USEFUL TO SET IMAGE POSITION */
+  background-position: top;  /* USEFUL TO SET IMAGE POSITION */
+
 }
-/* FOOTER CSS */
+/* FOOTER */
 .footer {
   padding: 30px;
   clear: both;
@@ -254,7 +256,7 @@ text-decoration: none;
       right: 0;
       left: 0;
       text-align: center;
-      padding: 16px 0;
+      padding: 25px 0;
  }
   .menu li:hover {
       display: inline-block;
@@ -279,13 +281,13 @@ text-decoration: none;
       margin-bottom: 5px;
       grid-template-areas: "portfolio1" "portfolio2" "portfolio3" "portfolio4" "portfolio5" ;
  }
-  .overlay h2 
  /* ADJUSTS FONT SIZE FOR MOBILE */
+  .overlay h2
   {
       font-size: 20px;
  }
-  .heading 
  /* ADJUSTS GRID HEADINGS FOR MOBILE */
+  .heading
   {
       padding: 35px;
       height: 20px;
@@ -293,10 +295,17 @@ text-decoration: none;
       border-bottom: 5px solid var(--Satin);
  }
 
- .contactcolumn p 
-  /* ADJUSTS CONTACT ICONS FOR MOBILE */
+ /* ADJUSTS CONTACT ICONS FOR MOBILE */
+ .contactcolumn p
   {
   padding: 0px 5px;
       
 }
+
+/* ADJUSTS LOGO POSITION FOR MOBILE */
+.logo  {
+  left: 0px;
+}
+
+
 }
